--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-data-table-component": "^7.5.0",
     "react-dom": "18.0.0",
     "react-fontawesome": "^1.7.1"
   },
