--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "admin-lte": "^3.2.0",
     "axios": "^0.26.1",
+    "bootstrap-table": "^1.20.0",
     "md5": "^2.3.0",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
