--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sweetalert2/themes": "^5.0.10",
     "admin-lte": "^3.2.0",
     "axios": "^0.26.1",
     "bootstrap-table": "^1.20.0",
@@ -19,7 +20,8 @@
     "react": "18.0.0",
     "react-data-table-component": "^7.5.0",
     "react-dom": "18.0.0",
-    "react-fontawesome": "^1.7.1"
+    "react-fontawesome": "^1.7.1",
+    "toastr2": "^3.0.0-alpha.18"
   },
   "devDependencies": {
     "eslint": "8.13.0",
