--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "admin-lte": "^3.2.0",
     "axios": "^0.26.1",
     "bootstrap-table": "^1.20.0",
+    "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.3",
