--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sweetalert2/themes": "^5.0.10",
     "admin-lte": "^3.2.0",
+    "antd": "^4.20.3",
     "axios": "^0.26.1",
     "bootstrap-table": "^1.20.0",
     "jwt-decode": "^3.1.2",
@@ -22,8 +23,8 @@
     "react-data-table-component": "^7.5.0",
     "react-dom": "18.0.0",
     "react-fontawesome": "^1.7.1",
-    "toastr2": "^3.0.0-alpha.18",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "toastr2": "^3.0.0-alpha.18"
   },
   "devDependencies": {
     "eslint": "8.13.0",
